codegen/tests/errors/not_allowed_typed_receivers.stderr
error: all trait method must have an untyped receiver
 --> tests/errors/not_allowed_typed_receivers.rs:5:5
  |
5 |     fn id(this: &Self) -> usize;
  |     ^^
